--- a/views/Schedule/schedule.ejs
+++ b/views/Schedule/schedule.ejs
@@ -137,7 +137,7 @@
 
     <!-- <div id="calendar"></div> -->
     <div id='calendar1'></div>
-    <div class="footer-basic">
+    <div class="footer-basic" style="margin-top: 40px;">
         <footer>
             <div class="social">
                 <a href="#"><i class="icon ion-social-instagram"></i></a>
