--- a/views/Homepage/index.ejs
+++ b/views/Homepage/index.ejs
@@ -467,13 +467,13 @@
             <li class="nav-list"><a href="/Task">Task</a></li>
             <li class="nav-list"><a href="/Schedule">Schedule</a></li>
             <li class="nav-list"><a href="/">Project</a></li>
-            <!-- <li class="topnav-right nav-list"><a href="#signup">Sign Up</a></li>
-            <li class="topnav-right nav-list"><a href="#signin">Sign In</a></li> -->
+            <li class="topnav-right nav-list"><a href="#signup">Sign Up</a></li>
+            <li class="topnav-right nav-list"><a href="#signin">Sign In</a></li>
             <li class="dropdownIcon nav-list"><a href="javascript:void(0);" onclick="dropdownMenu()">&#9776;</a></li>
         </ul>
     </nav>
 
-    <div class="container" id="section-1-gradient" style="margin: 0; ">
+    <div class="container" id="section-1-gradient" style="margin: 0; padding-top: 100px; padding-bottom: 180px; ">
         <div class="row">
             <div class="col-6">
                 <div class="leftSide-col">
@@ -501,7 +501,7 @@
 
 
     <header>
-        <h1 class="section2Header" style="font-family: Montserrat;">The Standards of Awesomeness</h1>
+        <h1 class="section2Header" style="font-family: Montserrat;">Learning is the Way to Success</h1>
     </header>
 
     <div class="container">
@@ -509,31 +509,35 @@
             <div class="col-4">
                 <div class="box">
                     <div class="icon">
-                        <img src="../Assets/logo.png" width="120px" height="120px">
+                        <img src="../Assets/todolist.png" width="120px" height="120px">
                     </div>
                     <label style="font-family: 'Source Sans Pro', sans-serif;">Task</label>
-                    <p style="font-family: Montserrat; font-size: 18px;">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    <p style="font-family: Montserrat; font-size: 18px;">The teacher or the class president can update
+                        the timeline of class’s activities. From there, all of
+                        the class members can follow the activities.
+                    </p>
                 </div>
             </div>
             <div class="col-4">
                 <div class="box">
                     <div class="icon">
-                        <img src="../Assets/logo.png" width="120px" height="120px">
+                        <img src="../Assets/calendar.png" width="120px" height="120px">
                     </div>
                     <label style="font-family: 'Source Sans Pro', sans-serif;">Schedule</label>
-                    <p style="font-family: Montserrat; font-size: 18px;">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    <p style="font-family: Montserrat; font-size: 18px;">Stop wasting paper on hand-writing schedule!
+                        Use this function to update and arrange your subjects at school.
+                    </p>
                 </div>
             </div>
             <div class="col-4">
                 <div class="box">
                     <div class="icon">
-                        <img src="../Assets/logo.png" width="120px" height="120px">
+                        <img src="../Assets/project.png" width="120px" height="120px">
                     </div>
-                    <label style="font-family: 'Source Sans Pro', sans-serif;">Projects</label>
-                    <p style="font-family: Montserrat; font-size: 18px;">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    <label style="font-family: 'Source Sans Pro', sans-serif;">Project</label>
+                    <p style="font-family: Montserrat; font-size: 18px;">Uploading assignments is what Project
+                        brings to the users. It saves all of the documents from students and teachers.
+                    </p>
                 </div>
             </div>
         </div>
@@ -548,11 +552,12 @@
         <div class="row">
             <div class="col-7">
                 <article>
-                    <p style="font-family: Montserrat; font-size: 28px;">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.Lorem ipsum dolor sit
-                        amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore.</p>
+                    <p style="font-family: Montserrat; font-size: 28px;">We are a group of high school students who are
+                        fall in love with coding. We love creating apps, websites which are useful with every students
+                        in the world. After using this website, we hope that you guys are all like it. That is a
+                        motivation for us to create more useful app/website to improve a lot of student learning's
+                        qualities.
+                    </p>
                 </article>
             </div>
             <div class="col-5">
