change route / -> /Project

--- a/views/Homepage/index.ejs
+++ b/views/Homepage/index.ejs
@@ -463,10 +463,10 @@
 <body>
     <nav>
         <ul class="topnav" id="dropdownClick">
-            <li class="nav-list"><a class="active" href="/Homepage">Home</a></li>
+            <li class="nav-list"><a class="active" href="/">Home</a></li>
             <li class="nav-list"><a href="/Task">Task</a></li>
             <li class="nav-list"><a href="/Schedule">Schedule</a></li>
-            <li class="nav-list"><a href="/">Project</a></li>
+            <li class="nav-list"><a href="/Project">Project</a></li>
             <li class="topnav-right nav-list"><a href="#signup">Sign Up</a></li>
             <li class="topnav-right nav-list"><a href="#signin">Sign In</a></li>
             <li class="dropdownIcon nav-list"><a href="javascript:void(0);" onclick="dropdownMenu()">&#9776;</a></li>
