--- a/views/Project/project.ejs
+++ b/views/Project/project.ejs
@@ -47,10 +47,10 @@
 
     <nav>
         <ul class="topnav" id="dropdownClick">
-            <li class="nav-list"><a class="active" href="/Homepage">Home</a></li>
+            <li class="nav-list"><a class="active" href="/">Home</a></li>
             <li class="nav-list"><a href="/Task">Task</a></li>
             <li class="nav-list"><a href="/Schedule">Schedule</a></li>
-            <li class="nav-list"><a href="/">Project</a></li>
+            <li class="nav-list"><a href="/Project">Project</a></li>
             <!-- <li class="topnav-right nav-list"><a href="#signup">Sign Up</a></li>
             <li class="topnav-right nav-list"><a href="#signin">Sign In</a></li> -->
             <li class="dropdownIcon nav-list"><a href="javascript:void(0);" onclick="dropdownMenu()">&#9776;</a></li>
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-6 m-auto">
                 <h1 class="text-center display-4 my-4">Project Uploads</h1>
-                <form action="/upload" method="POST" enctype="multipart/form-data">
+                <form action="/Project/upload" method="POST" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="file" class="form-label"></label>
                         <input class="form-control form-control-sm custom-file-input" id="file" type="file" name="file">
@@ -83,7 +83,7 @@
                             <% } else { %>
                                 <%= file.filename %>
                             <% } %>
-                            <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
+                            <form method="POST" action="/Project/files/<%= file._id %>?_method=DELETE">
                                 <div class="d-grid gap-2 col-6 mx-auto">
                                     <button class="btn btn-danger btn-primary mt-4">DELETE</button>
                                 </div>
